
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* name; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int stderr ;
 TYPE_1__* tg ;

void usage( char * a )
{
 int o = 0 ;
 fprintf(stderr,
  "__Usage: %s -h host -t target [options]\n\n"
  "-o\toffset\n"
  "-a\talign\n"
  "-s\tstep for bruteforcing (try 120 <= step <= 512)\n"
  "-l\tlength of filename\n"
  "-v\ttreceives packets too (check if daemon's crashed)\n"
  "-b\tenables bruteforce (dangerous !)\n\n", a);
 while( tg[o].name != ((void*)0) )
 {
  fprintf(stderr, "\t%d - %s\n", o, tg[o].name ); o++ ;
 }
 fprintf( stderr, "\n" );
 exit( EXIT_FAILURE );
}
